--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .showcase {
-  position: relative;
+  position: absolute;
   right: 0;
   width: 100%;
   min-height: 100vh;
@@ -21,11 +22,10 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.8;
+  opacity: 0.5;
 }
 
 .overlay {
-  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -40,5 +40,5 @@
   padding: 1rem;
   border-radius: 0;
   z-index: 10;
-  align-items: center;
+  margin: auto;
 }
