--- a/views/landing.html
+++ b/views/landing.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Just-Your-Teams</title>
+    <title>Just-Your-Teams Welcome</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
       integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/landing-style.css" />
   </head>
+  
   <body>
     <section class="showcase" id="landing">
       <header>
@@ -29,7 +30,7 @@
               <p><input type="submit" class="button expanded" value="Log in"></input></p>
               <p class="text-center"><a href="#">No account? Sign up today!</a></p>
             </form>
-            <video class="" src="assets/img/SoccerHeader.mp4" muted loop autoplay></video>
+            <video class="" src="../assets/img/SoccerHeader.mp4" muted loop autoplay></video>
           </div>
           <div class="toggle"></div>
         </div>
@@ -37,5 +38,5 @@
       <div class="overlay"></div>
     </section>
   </body>
-  <script src="assets/js/script.js"></script>
+  <script src="../assets/js/script.js"></script>
 </html>
