page template created for searching for teams CSS updates done to HTML pages

--- a/views/userpage.html
+++ b/views/userpage.html
@@ -11,6 +11,10 @@
       integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I="
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../assets/css/userpage.css" />
   </head>
   <body>
@@ -21,7 +25,7 @@
             <div class="top-bar-right">
               <ul class="menu simple vertical medium-horizontal">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Add Teams</a></li>
                 <li>
                   <button
                     type="button"
@@ -34,6 +38,28 @@
             </div>
           </div>
         </nav>
+      </div>
+    </section>
+    <section>
+      <!-- User content to be added here -->
+    </section>
+    <section>
+      <div>
+        <footer class="social-footer">
+          <div class="social-footer-left">
+            <a href="#"><img class="logo" src="https://placehold.it/150x30"></a>
+          </div>
+          <div class="social-footer-icons">
+            <ul class="menu simple">
+              <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+              <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            </ul>
+          </div>
+        </footer>
+        
+        
       </div>
     </section>
   </body>
