--- a/views/create-acc.html
+++ b/views/create-acc.html
@@ -41,7 +41,7 @@
 
             <div class="input-group">
               <span class="input-group-label">
-                <i class="fa fa-user"></i>
+                <i class="fa fa-id-card"></i>
               </span>
               <input
                 class="input-group-field"
@@ -52,7 +52,7 @@
 
             <div class="input-group">
               <span class="input-group-label">
-                <i class="fa fa-envelope"></i>
+                <i class="fa fa-user"></i>
               </span>
               <input
                 class="input-group-field"
