--- a/views/userpage.html
+++ b/views/userpage.html
@@ -47,7 +47,7 @@
       <div>
         <footer class="social-footer">
           <div class="social-footer-left">
-            <a href="#"><img class="logo" src="https://placehold.it/150x30"></a>
+            <a href="#"><img class="logo" src=""></a>
           </div>
           <div class="social-footer-icons">
             <ul class="menu simple">
