--- a/views/create-acc.html
+++ b/views/create-acc.html
@@ -25,7 +25,7 @@
           <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
               <ul class="menu simple vertical medium-horizontal">
-                <li><a href="#">Home</a></li>
+                <li><a href="landing.html">Home</a></li>
               </ul>
             </div>
           </div>
