--- a/views/create-acc.html
+++ b/views/create-acc.html
@@ -35,46 +35,147 @@
     <br />
     <section>
       <div class="grid-container align-center">
-        <form>
-          <div class="form-icons">
-            <h4>Register for an account</h4>
-
-            <div class="input-group">
-              <span class="input-group-label">
-                <i class="fa fa-id-card"></i>
-              </span>
-              <input
-                class="input-group-field"
-                type="text"
-                placeholder="Full name"
-              />
+        <div class="grid-x grid-margin-x align-center">
+          <form>
+            <div class="form-icons">
+              <h4>Register for an account</h4>
+              <div class="input-group">
+                <span class="input-group-label">
+                  <i class="fa fa-id-card"></i>
+                </span>
+                <input
+                  class="input-group-field"
+                  type="text"
+                  placeholder="Full name"
+                />
+              </div>
+              <div class="input-group">
+                <span class="input-group-label">
+                  <i class="fa fa-user"></i>
+                </span>
+                <input
+                  class="input-group-field"
+                  type="text"
+                  placeholder="Username"
+                />
+              </div>
+              <div class="input-group">
+                <span class="input-group-label">
+                  <i class="fa fa-key"></i>
+                </span>
+                <input
+                  class="input-group-field"
+                  type="text"
+                  placeholder="Password"
+                />
+              </div>
             </div>
-
-            <div class="input-group">
-              <span class="input-group-label">
-                <i class="fa fa-user"></i>
-              </span>
-              <input
-                class="input-group-field"
-                type="text"
-                placeholder="Username"
-              />
-            </div>
-
-            <div class="input-group">
-              <span class="input-group-label">
-                <i class="fa fa-key"></i>
-              </span>
-              <input
-                class="input-group-field"
-                type="text"
-                placeholder="Password"
-              />
-            </div>
+            <button class="button expanded">Sign Up</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <br />
+    <section>
+      <div class="grid-container">
+        <div class="grid-x grid-margin-x align-center">
+          <div class="status-update-input-box">
+            <form>
+              <div class="row input-box-container">
+                <div class="columns">
+                  <label>
+                    <!-- Add a Label here to give this input box a heading -->
+                    <textarea
+                      rows="5"
+                      placeholder="Lets hear about you sports fan!"
+                    ></textarea>
+                  </label>
+                </div>
+              </div>
+              <div class="row medium-collapse user-action-container">
+                <div class="small-12 medium-7 columns">
+                  <div class="user-action-box">
+                    <div class="action-area">
+                      <a
+                        href="#"
+                        class="action-anchor has-tip bottom"
+                        data-tooltip
+                        aria-haspopup="true"
+                        data-disable-hover="false"
+                        tabindex="2"
+                        title="Upload a Photo"
+                      >
+                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                        <span class="show-for-sr">Upload a Photo</span>
+                      </a>
+                    </div>
+                    <div class="action-area">
+                      <a
+                        href="#"
+                        class="action-anchor has-tip bottom"
+                        data-tooltip
+                        aria-haspopup="true"
+                        data-disable-hover="false"
+                        tabindex="2"
+                        title="Upload a Video"
+                      >
+                        <i class="fa fa-video-camera" aria-hidden="true"></i>
+                        <span class="show-for-sr">Upload a Video</span>
+                      </a>
+                    </div>
+                    <div class="action-area">
+                      <a
+                        href="#"
+                        class="action-anchor has-tip bottom"
+                        data-tooltip
+                        aria-haspopup="true"
+                        data-disable-hover="false"
+                        tabindex="2"
+                        title="Check in"
+                      >
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        <span class="show-for-sr">Check in</span>
+                      </a>
+                    </div>
+                    <div class="action-area">
+                      <a
+                        href="#"
+                        class="action-anchor has-tip bottom"
+                        data-tooltip
+                        aria-haspopup="true"
+                        data-disable-hover="false"
+                        tabindex="2"
+                        title="Add a Feeling"
+                      >
+                        <i class="fa fa-smile-o" aria-hidden="true"></i>
+                        <span class="show-for-sr">Add a Feeling</span>
+                      </a>
+                    </div>
+                    <div class="action-area">
+                      <a
+                        href="#"
+                        class="action-anchor has-tip bottom"
+                        data-tooltip
+                        aria-haspopup="true"
+                        data-disable-hover="false"
+                        tabindex="2"
+                        title="Tag a Friend"
+                      >
+                        <i class="fa fa-tags" aria-hidden="true"></i>
+                        <span class="show-for-sr">Tag a Friend</span>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="small-12 medium-5 columns">
+                  <div class="user-submit-box">
+                    <input type="submit" class="button small" value="POST" />
+                  </div>
+                </div>
+              </div>
+            </form>
           </div>
-
-          <button class="button expanded">Sign Up</button>
-        </form>
+        </div>
       </div>
     </section>
   </body>
