--- a/public/assets/css/create-acc-style.css
+++ b/public/assets/css/create-acc-style.css
@@ -1,3 +1,4 @@
+/* Navigation */
 .topbar-responsive {
   background: #2c3840;
   padding: 1rem 1.5rem;
@@ -126,6 +127,7 @@
   }
 }
 
+/* Signup form */
 form .form-icons {
   text-align: center;
 }
@@ -148,13 +150,49 @@ form .form-icons .fa {
   width: 1rem;
 }
 
+/* Choose team form */
+.translucent-form-overlay {
+  max-width: 500px;
+  width: 100%;
+  background-color: rgba(54, 54, 54, 0.8);
+  padding: 20px;
+  color: #fefefe;
+}
 
+.translucent-form-overlay .columns.row {
+  display: block;
+}
+
+.translucent-form-overlay h3,
+.translucent-form-overlay label {
+  color: #fefefe;
+}
+
+.translucent-form-overlay input,
+.translucent-form-overlay select {
+  color: #8a8a8a;
+}
+
+.translucent-form-overlay input::-webkit-input-placeholder {
+  color: #8a8a8a;
+}
+
+.translucent-form-overlay input:-ms-input-placeholder {
+  color: #8a8a8a;
+}
+
+.translucent-form-overlay input::placeholder {
+  color: #8a8a8a;
+}
+
+/* Initial about me */
 .status-update-input-box {
   background-color: #fefefe;
   padding: 1rem;
   width: 60%;
   border: 1px solid #cacaca;
-  box-shadow: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.18), 0 0.125rem 2px rgba(0, 0, 0, 0.36);
+  box-shadow: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.18),
+    0 0.125rem 2px rgba(0, 0, 0, 0.36);
 }
 
 .status-update-input-box .input-box-container textarea {
@@ -166,7 +204,8 @@ form .form-icons .fa {
   box-shadow: none;
 }
 
-.status-update-input-box .input-box-container textarea, .status-update-input-box .input-box-container textarea:focus {
+.status-update-input-box .input-box-container textarea,
+.status-update-input-box .input-box-container textarea:focus {
   border-bottom: none;
 }
 
@@ -193,16 +232,28 @@ form .form-icons .fa {
   padding-bottom: 0.675rem;
 }
 
-.status-update-input-box .user-action-container .user-action-box .action-area:last-of-type {
+.status-update-input-box
+  .user-action-container
+  .user-action-box
+  .action-area:last-of-type {
   border-right: none;
 }
 
-.status-update-input-box .user-action-container .user-action-box .action-area .action-anchor.has-tip {
+.status-update-input-box
+  .user-action-container
+  .user-action-box
+  .action-area
+  .action-anchor.has-tip {
   border-bottom: none;
   cursor: pointer;
 }
 
-.status-update-input-box .user-action-container .user-action-box .action-area .action-anchor .fa {
+.status-update-input-box
+  .user-action-container
+  .user-action-box
+  .action-area
+  .action-anchor
+  .fa {
   color: #1779ba;
 }
 
@@ -213,16 +264,16 @@ form .form-icons .fa {
   display: -ms-flexbox;
   display: flex;
   -webkit-justify-content: flex-end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
 }
 
 @media screen and (max-width: 39.9375em) {
   .status-update-input-box .user-action-container .user-submit-box {
     border-top: none;
     -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 
@@ -247,3 +298,34 @@ form .form-icons .fa {
   }
 }
 
+/* Footer */
+.social-footer {
+  padding: 1rem;
+  background: #2c3840;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.social-footer .social-footer-icons li:last-of-type {
+  margin-right: 0;
+}
+
+.social-footer .social-footer-icons .fa {
+  font-size: 1.3rem;
+  color: #fefefe;
+}
+
+.social-footer .social-footer-icons .fa:hover {
+  color: #4a4a4a;
+  transition: color 0.3s ease-in;
+}
