--- a/public/assets/css/userpage.css
+++ b/public/assets/css/userpage.css
@@ -126,14 +126,15 @@
     animation: fadeIn 1s ease-in;
   }
 }
-
-
+/* Profile card settings */
 .profile-card-action-icons {
   background-color: #fefefe;
   font-weight: 400;
+  width: 60%;
   margin-bottom: 1.6rem;
   border-radius: 0.125rem;
-  box-shadow: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.18), 0 0.125rem 2px rgba(0, 0, 0, 0.36);
+  box-shadow: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.18),
+    0 0.125rem 2px rgba(0, 0, 0, 0.36);
 }
 
 .profile-card-action-icons .card-section {
@@ -152,38 +153,64 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-align-items: flex-start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
 }
 
-.profile-card-action-icons .card-section .profile-card-header .profile-card-avatar {
+.profile-card-action-icons
+  .card-section
+  .profile-card-header
+  .profile-card-avatar {
   margin-right: 0.5rem;
 }
 
-.profile-card-action-icons .card-section .profile-card-header .profile-card-avatar .avatar-image {
+.profile-card-action-icons
+  .card-section
+  .profile-card-header
+  .profile-card-avatar
+  .avatar-image {
   border-radius: 50%;
   width: 3.75rem;
   height: 3.75rem;
 }
 
-.profile-card-action-icons .card-section .profile-card-header .profile-card-author {
+.profile-card-action-icons
+  .card-section
+  .profile-card-header
+  .profile-card-author {
   -webkit-flex: 1 0 0;
-      -ms-flex: 1 0 0px;
-          flex: 1 0 0;
+  -ms-flex: 1 0 0px;
+  flex: 1 0 0;
   margin-top: 0.3rem;
   padding-bottom: 0;
 }
 
-.profile-card-action-icons .card-section .profile-card-header .profile-card-author .author-title,
-.profile-card-action-icons .card-section .profile-card-header .profile-card-author .author-description {
+.profile-card-action-icons
+  .card-section
+  .profile-card-header
+  .profile-card-author
+  .author-title,
+.profile-card-action-icons
+  .card-section
+  .profile-card-header
+  .profile-card-author
+  .author-description {
   margin-bottom: 0;
 }
 
-.profile-card-action-icons .card-section .profile-card-header .profile-card-author .author-title {
+.profile-card-action-icons
+  .card-section
+  .profile-card-header
+  .profile-card-author
+  .author-title {
   color: #0a0a0a;
 }
 
-.profile-card-action-icons .card-section .profile-card-header .profile-card-author .author-description {
+.profile-card-action-icons
+  .card-section
+  .profile-card-header
+  .profile-card-author
+  .author-description {
   color: #8a8a8a;
   font-size: 0.9em;
 }
@@ -196,22 +223,35 @@
   text-align: left;
 }
 
-.profile-card-action-icons .card-section .profile-card-about .separator-left::before, .profile-card-action-icons .card-section .profile-card-about .separator-left::after {
+.profile-card-action-icons
+  .card-section
+  .profile-card-about
+  .separator-left::before,
+.profile-card-action-icons
+  .card-section
+  .profile-card-about
+  .separator-left::after {
   display: table;
-  content: ' ';
+  content: " ";
   -webkit-flex-basis: 0;
-      -ms-flex-preferred-size: 0;
-          flex-basis: 0;
+  -ms-flex-preferred-size: 0;
+  flex-basis: 0;
   -webkit-order: 1;
-      -ms-flex-order: 1;
-          order: 1;
+  -ms-flex-order: 1;
+  order: 1;
 }
 
-.profile-card-action-icons .card-section .profile-card-about .separator-left::after {
+.profile-card-action-icons
+  .card-section
+  .profile-card-about
+  .separator-left::after {
   clear: both;
 }
 
-.profile-card-action-icons .card-section .profile-card-about .separator-left::after {
+.profile-card-action-icons
+  .card-section
+  .profile-card-about
+  .separator-left::after {
   position: relative;
   width: 3rem;
   border-bottom: 0.125rem solid #1779ba;
@@ -227,16 +267,25 @@
   margin-top: 0.6rem;
 }
 
-.profile-card-action-icons .card-section .profile-card-about .about-skills ul.arrow {
+.profile-card-action-icons
+  .card-section
+  .profile-card-about
+  .about-skills
+  ul.arrow {
   list-style-type: none;
   padding-left: 0;
   margin-left: 0;
   margin-bottom: 0;
 }
 
-.profile-card-action-icons .card-section .profile-card-about .about-skills ul.arrow li:before {
-  content: '\f006';
-  font-family: 'FontAwesome';
+.profile-card-action-icons
+  .card-section
+  .profile-card-about
+  .about-skills
+  ul.arrow
+  li:before {
+  content: "\f006";
+  font-family: "FontAwesome";
   float: left;
   color: #1779ba;
   margin-right: 0.5rem;
@@ -256,25 +305,44 @@
   padding-bottom: 0.4rem;
 }
 
-.profile-card-action-icons .card-section .profile-card-action .action-area:last-of-type {
+.profile-card-action-icons
+  .card-section
+  .profile-card-action
+  .action-area:last-of-type {
   border-right: none;
 }
 
-.profile-card-action-icons .card-section .profile-card-action .action-area .action-anchor.has-tip {
+.profile-card-action-icons
+  .card-section
+  .profile-card-action
+  .action-area
+  .action-anchor.has-tip {
   border-bottom: none;
   cursor: pointer;
 }
 
-.profile-card-action-icons .card-section .profile-card-action .action-area .action-anchor .fa {
+.profile-card-action-icons
+  .card-section
+  .profile-card-action
+  .action-area
+  .action-anchor
+  .fa {
   color: #1779ba;
 }
 
+/* Sports content cards */
 
+.basic-card{
+  margin-bottom: 1.6rem;
+  border-radius: 0.125rem;
+  box-shadow: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.18),
+    0 0.125rem 2px rgba(0, 0, 0, 0.36);
+}
 
 .social-footer {
   padding: 1rem;
   background: #2c3840;
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
   display: -webkit-flex;
