grid-container structure for HTML redone for responsive and clarity

--- a/public/assets/css/create-acc-style.css
+++ b/public/assets/css/create-acc-style.css
@@ -189,7 +189,7 @@ form .form-icons .fa {
 .social-footer {
   padding: 1rem;
   background: #2c3840;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   display: -webkit-flex;
